--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "next": "14.2.3",
+    "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/prismjs": "^1.26.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
